webapp/src/main/webapp/resources/css/style.css
/* ... */
div.input-field div.select-wrapper ul.dropdown-content.select-dropdown {
    border-color: white !important;
    border-width: thick;
}

div.datepicker-date-display {
    background-color: var(--primary-color) !important;
}

div.input-field.margin-left.flex input::placeholder {
    color: white !important;
}

div.datepicker-footer div.confirmation-btns button {
    color: black !important;
}

td.is-today {
    background-color: var(--primary-color) !important;
    color: white !important;
}

td.is-selected {
    background-color: var(--secondary-color) !important;
    color: black !important;
}

div.input-field.margin-left div.selects-container div.select-wrapper input.select-dropdown.dropdown-trigger {
    color: black !important;
}

div.order-div {
    display: flex;
    /*align-items: center;*/
    align-self: center;
}


/* NavBar */

.nav-bar {
    background: var(--primary-color);
    padding-right: 3%;
}

.search-close {
    position: absolute;
    background-color: transparent;
}

.search-color {
    background: var(--white);
}

.brand-logo {
    display: flex !important;
    align-items: center;
    margin-left: 2%;
}

.logo-image {
    margin-left: 1%;
    height: 50px;
}

.search-size {
    max-width: 35%;
    max-height: 95%;
    margin-left: 15% !important;
}

.responsive-navbar {
    display: flex;
    flex-direction: row;
    width: 50%;
}

/*landing-page.jsp*/
.container {
    margin-top: 20px;
    margin-bottom: 20px;
}

.dark-container {
    width: 100%;
    background-color: var(--primary-color) !important;
    color: var(--white);
    padding-bottom: 20px;
}

.to-debates {
    color: var(--white);
    transition: 0.3s;
}

.to-debates:hover {
    color: var(--secondary-color);
}

.parallax-container {
    position: relative;
    overflow: hidden;
    height: max-content !important;
    color: white;
    padding-bottom: 30px;
}

.parallax-container .parallax {
    filter: brightness(0.5);
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: -1;
}

.parallax-container .btn-small {
    background-color: transparent;
    border-radius: 10px;
}

.parallax-container .btn-small:hover {
    background: var(--badge-color);
}

.parallax-container h5 {
    text-align: left;
}

.parallax-container .parallax img {
    opacity: 0;
    z-index: -1 !important;
    position: absolute;
    left: 50%;
    bottom: 0;
    min-width: 100%;
    min-height: 100%;
}

.section {
    display: flex;
    flex-display: row;
    justify-content: center;
}

.section>div {
    flex-grow: 1;
}

.section>img {
    flex-grow: 1;
}

.right-text {
    text-align: right;
}

.image-size {
    max-width: 200px;
    max-height: 200px;
    width: 30vh;
    height: 30vh;
}

.page-footer {
    background: var(--primary-color);
    text-align: right !important;
    padding-bottom: 20px;
}

/* debate-list.jsp */

.debates-separator {
    display: flex;
    flex-direction: row;
    align-content: space-evenly;
}

.category-list {
    background: var(--white);
    border-radius: 10px;
    display: flex;
    align-items: center;
    flex-direction: column;
    margin: 1% auto 1% 9%;
    width: 15%;
    height: fit-content;
}

.selected-button {
    background-color: var(--selected-button);
}

div.category-list div.collection.with-header {
    border-color: transparent !important;
    border-collapse: collapse !important;
}

.collection a.active {
    background-color: var(--primary-color) !important;
    color: white !important;
}

.collection a {
    color: black !important;
}

.collection li.collection-header {
    display: flex;
    align-items: center;
    flex-direction: column;
}

.debate-list {
    background: transparent;
    /*border-radius: 10px;*/
    display: flex;
    margin: 1% 9% 1% auto;
    flex-direction: column;
    width: 60%;
    height: fit-content;
}

.category-button {
    border-radius: 10px;
    width: 100%;
    margin: 1em 0;
}

.debate-list>h2 {
    margin-left: 3%;
}

.pagination li.active {
    background-color: var(--primary-color);
    transition: 0.3s;
}

.pagination li.selected-button {
    background-color: var(--selected-button);
}

.pagination li.active:hover {
    background-color: var(--selected-button);
}

.pagination-margin {
    margin-bottom: 2%;
}

.limit-img-sm {
    max-width: 150px !important;
    max-height: 150px;
    width: 10vw;
    height: 10vw !important;
}

.order-div {
    display: flex;
    align-items: baseline;
}

.margin-left {
    margin-left: 3%;
}

.flex {
    display: flex;
    align-items: baseline;
}

.x:hover {
    cursor: pointer;
}


/* debate.jsp */

.debate-title {
    padding-bottom: 1%;
    margin: 0;
}

.image-width {
    min-width: 20%;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-left: 2%;
}

.limit-img {
    max-height: 250px;
    max-width: 250px !important;
    height: 15vw !important;
    width: 15vw;
}

.debate-info-holder {
    display: flex;
    justify-content: space-between;
    padding-top: 1%;
}

.debate-text-holder {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    height: fit-content;
    padding-bottom: 4%;
}

.debate-holder-separator {
    display: flex;
    flex: 1;
    flex-direction: column;
    justify-content: space-between;
}

.debate-footer {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: baseline;
    padding-top: 1%;
}

.username-container {
    display: flex;
    flex-direction: row;
    align-items: baseline;
}

.debate-content {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: flex-start;
}

.debate-buttons-display {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
}

.comment-list {
    background: var(--white);
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    width: 51%;
    margin-right: 1%;
}
/* ... */

